--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0",
     "multer": "^1.4.5-lts.1",
+    "stripe": "^14.18.0",
     "validator": "^13.11.0"
   }
 }
