--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "headers": "^0.9.6",
     "joi": "^17.12.2",
+    "joi-objectid": "^4.0.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0",
     "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.0",
+    "uuid": "^9.0.1",
     "validator": "^13.11.0"
   }
 }
