--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
+  "scripts": {
+    "start": "nodemon server.js"
+  },
   "dependencies": {
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "headers": "^0.9.6",
     "joi": "^17.12.2",
     "joi-objectid": "^4.0.2",
